syntax = "proto3";

package protolog.testing;

message Foo {
  string string_field = 1;
  int32 int32_field = 2;
}

message Bar {
  string string_field = 1;
  int32 int32_field = 2;
}

message Baz {
  message Bat {
    message Ban {
      string string_field = 1;
      int32 int32_field = 2;
    }
    Ban ban = 1;
  }
  Bat bat = 1;
}
